--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ $(document).ready(function(){
 						$.each(data.posts,function(k, v){
 							//console.log(v);
 							//alert(v);
-							$content += "<p>"+v.title+"</p>";
+							$content += "<p>"+v.content+"</p>";
 							
 							
 						});
