--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ $(document).bind('mobileinit',function(){
 function fetch_and_display_posts()
 {
     var xhr = new XMLHttpRequest();
-    xhr.open("GET", "http://alzlanka.org/test/wp-admin/admin-ajax.php?action=posts&username=" + encodeURIComponent(username));
+    xhr.open("GET", "http://alzlanka.org/test/wp-admin/admin-ajax.php?action=posts&username=" + encodeURIComponent(reusername));
     xhr.onload = function(){
 		alert(xhr.responseText);
         var posts_array = JSON.parse(xhr.responseText);
