--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
         
         <div data-role="footer" data-position="inline">
 			<h1>© Tenders.lk</h1>
+    		<div class="ui-btn-right ui-btn ui-btn-inline ui-mini ui-corner-all ui-btn-icon-right ui-icon-gear logout" onClick="logout();">Log Out</div>
+
 		</div>
+        <a href="#login" id="logout_link"></a>
 	</div>
 <!--Latest page end-->
 
