--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <!--Login Page start-->
 	<div data-role="page" id="login" data-theme="a" class="login-page">
-		<div data-role="header" data-position="inline">
+		<div data-role="header" data-position="inline" class="header-top">
 			<h1>Tenders.lk</h1>
 		</div>
 		<div data-role="content" data-theme="a" class="login-content">
@@ -44,7 +44,7 @@
 
 <!--Latest Page start-->
 	<div data-role="page" id="latest" data-theme="a">
-		<div data-role="header" data-position="inline">
+		<div data-role="header" data-position="inline" class="header-top">
             <div data-role="navbar" data-theme="a">
                 <ul>
                     <li><a href="#latest" data-icon="grid" class="ui-btn-active">Latest</a></li>
@@ -67,7 +67,7 @@
 
 <!--Category Page start-->
 	<div data-role="page" id="category" data-theme="a">
-		<div data-role="header" data-position="inline">
+		<div data-role="header" data-position="inline" class="header-top">
             <div data-role="navbar" data-theme="a">
                 <ul>
                     <li><a href="#latest" data-icon="grid" class="ui-btn-active">Latest</a></li>
@@ -96,7 +96,7 @@
 
 <!--Single tender Page start-->
 	<div data-role="page" id="single" data-theme="a">
-		<div data-role="header" data-position="inline">
+		<div data-role="header" data-position="inline" class="header-top">
             <div data-role="navbar" data-theme="a">
                 <ul>
                     <li><a href="#latest" data-icon="grid" class="ui-btn-active">Latest</a></li>
