--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
 		</div>
 		<div data-role="content" data-theme="a">
         	<ul data-role="listview" data-count-theme="b" data-inset="true">
-                <li><a href="#">Inbox <span class="ui-li-count">12</span></a></li>
-                <li><a href="#">Outbox <span class="ui-li-count">0</span></a></li>
-                <li><a href="#">Drafts <span class="ui-li-count">4</span></a></li>
-                <li><a href="#">Sent <span class="ui-li-count">328</span></a></li>
-                <li><a href="#">Trash <span class="ui-li-count">62</span></a></li>
+                <li><a href="#">Inbox </a></li>
+                <li><a href="#">Outbox </a></li>
+                <li><a href="#">Drafts </a></li>
+                <li><a href="#">Sent</a></li>
+                <li><a href="#">Trash</a></li>
             </ul>	
 		</div>
         
