--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <ul>
                     <li><a href="#latest" data-icon="grid" class="ui-btn-active" onClick="fetch_and_display_posts('LATEST');">Latest</a></li>
                     <li><a href="" data-icon="star">Tenders.lk</a></li>
-                    <li><a href="#category" data-icon="gear">Categories</a></li>
+                    <li><a href="#category" data-icon="gear" onClick="category();">Categories</a></li>
                 </ul>
             </div><!-- /navbar -->
 			
@@ -82,15 +82,7 @@
             </div><!-- /navbar -->
 			
 		</div>
-		<div data-role="content" data-theme="a">
-        	<ul data-role="listview" data-count-theme="b" data-inset="true">
-                <li><a href="#">Inbox </a></li>
-                <li><a href="#">Outbox </a></li>
-                <li><a href="#">Drafts </a></li>
-                <li><a href="#">Sent</a></li>
-                <li><a href="#">Trash</a></li>
-            </ul>	
-		</div>
+		<div data-role="content" data-theme="a" id="cat-content"></div>
         
         <div data-role="footer" data-position="inline">
 			<h1>© Tenders.lk</h1>
