--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
 
 <!--Login Page start-->
 	<div data-role="page" id="login" data-theme="a" class="login-page">
-		<div data-role="header" data-position="inline" class="header-top">
-			<h1>Tenders.lk</h1>
-		</div>
+		
 		<div data-role="content" data-theme="a" class="login-content">
+        <div id="title" align="center" >
+        <h1>Tenders.lk</h1>
+        </div>
             <div class="ui-field-contain">
                 <input name="username" id="username" placeholder="Enter Username" value="" type="text">
                 <input name="password" id="password" placeholder="Enter Password" value="" type="password">
@@ -36,9 +37,7 @@
             </div>
 		</div>
         
-        <div data-role="footer" data-position="inline" class="login-footer">
-			<h1>© Tenders.lk</h1>
-		</div>
+        
 	</div>
 <!--Login page end-->
 
