--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
 		<div data-role="header" data-position="inline" class="header-top">
             <div data-role="navbar" data-theme="a">
                 <ul>
-                    <li><a href="#latest" data-icon="star" class="ui-btn-active">Latest</a></li>
+                    <li><a href="#latest" data-icon="star" class="ui-btn-active" onClick="fetch_and_display_posts('LATEST');">Latest</a></li>
                     <li><a href="" data-icon="home" style="pointer-events: none; cursor: default;">Tenders.lk</a></li>
-                    <li><a href="#category" data-icon="bullets">Categories</a></li>
+                    <li><a href="#category" data-icon="bullets" onClick="category();">Categories</a></li>
                 </ul>
             </div><!-- /navbar -->
 			
@@ -131,9 +131,9 @@
 		<div data-role="header" data-position="inline" class="header-top">
             <div data-role="navbar" data-theme="a">
                 <ul>
-                    <li><a href="#latest" data-icon="star" class="ui-btn-active">Latest</a></li>
+                    <li><a href="#latest" data-icon="star" class="ui-btn-active" onClick="fetch_and_display_posts('LATEST');">Latest</a></li>
                     <li><a href="" data-icon="home" style="pointer-events: none; cursor: default;">Tenders.lk</a></li>
-                    <li><a href="#category" data-icon="bullets">Categories</a></li>
+                    <li><a href="#category" data-icon="bullets" onClick="category();">Categories</a></li>
                 </ul>
             </div><!-- /navbar -->
 			
