--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
 		<div data-role="content" data-theme="a" id="catpost-content"></div>
         <div data-role="navbar">
             <ul>
-                <li><button class="ui-btn" onClick="cat_posts('CAT','NEW');">NEW</button></li>
-                <li><button class="ui-btn"onClick="cat_posts('CAT','OLD');">OLD</button></li>
+                <li><button class="ui-btn" onClick="cat_posts('CAT','NEW','ID');">NEW</button></li>
+                <li><button class="ui-btn"onClick="cat_posts('CAT','OLD','ID');">OLD</button></li>
             </ul>
         </div><!-- /navbar -->
         <div data-role="footer" data-position="inline">
