--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div id="lost-link" align="center"><a href="http://tenders.lk/wp-login.php?action=lostpassword" target="_blank" >Lost your password?</a></div>
                 <br>
                 <div id="about-link" align="center"><a href="#about">About Tenders.lk</a></div>
-                <a href="http://www.3dhdesign.com/" target="_blank"><img src="themes/images/3dhlogo.png" /></a>
+                <a href="http://www.3dhdesign.com/" target="_blank"><img src="themes/images/3dhlogo.9.png" /></a>
                 
                 <a href="#latest" id="latest_link"></a>
                 
